Ausgabeformat DinA5 klappt auch, usepackage[pass]{geometry}

--- a/planner/DYI_Main.tex
+++ b/planner/DYI_Main.tex
@@ -26,6 +26,8 @@
 % special symbols
 \usepackage{pifont}
 
+\usepackage[pass]{geometry} %sonst war es zwar DIN-A5 gesetzt, aber das papier hatte trotzdem A4..
+
 %--------------------------------------------------------------------
 % Document-wide settings
 
